WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272533
UBSAN: runtime error: negation of -2147483648 cannot be represented in type 'int'; cast to an unsigned type to negate this value to itself
https://bugs.webkit.org/show_bug.cgi?id=272533
Summary
UBSAN: runtime error: negation of -2147483648 cannot be represented in type '...
David Kilzer (:ddkilzer)
Reported
2024-04-11 08:58:36 PDT
UBSAN: runtime error: negation of -2147483648 cannot be represented in type 'int'; cast to an unsigned type to negate this value to itself This occurs in the following layout tests: fast/forms/datalist/datalist-dropdown-transformed-element-crash.html fast/css/border-image-scale-crash.html 2 OpenSource/Source/WebCore/platform/LayoutUnit.h:786:32: runtime error: negation of -2147483648 cannot be represented in type 'int'; cast to an unsigned type to negate this value to itself fast/selectors/nth-child-bounds.html 1 WebKitBuild/Release/usr/local/include/wtf/text/IntegerToStringConversion.h:96:154: runtime error: negation of -2147483648 cannot be represented in type 'int'; cast to an unsigned type to negate this value to itself fast/selectors/nth-child-bounds.html 1 WebKitBuild/Release/usr/local/include/wtf/text/IntegerToStringConversion.h:128:142: runtime error: negation of -2147483648 cannot be represented in type 'int'; cast to an unsigned type to negate this value to itself
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-11 08:58:54 PDT
<
rdar://problem/126277702
>
David Kilzer (:ddkilzer)
Comment 2
2024-04-11 16:43:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27172
EWS
Comment 3
2024-04-12 08:41:14 PDT
Committed
277431@main
(715c3124843b): <
https://commits.webkit.org/277431@main
> Reviewed commits have been landed. Closing PR #27172 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug